# rlupdate

./: Cargo.toml  README.md
src/: config.rs  lib.rs  updater.rs  xmlify.rs
